// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchResult should render Error 1`] = `
<Box
  justifyContent="center"
  marginTop="s48"
>
  Error...
</Box>
`;

exports[`SearchResult should render Loading 1`] = `
<Box
  justifyContent="center"
  marginTop="s48"
>
  <Loader />
</Box>
`;

exports[`SearchResult should render null when items is empty 1`] = `""`;

exports[`SearchResult should render null when products not present 1`] = `""`;

exports[`SearchResult should render products 1`] = `
<Grid
  main={true}
>
  <ProductList
    products={
      Array [
        Object {
          "date": "9:00",
          "header": "__TITLE__",
          "imageURL": "__IMAGE_URL__",
          "newsUrl": "__URL__",
        },
      ]
    }
  />
</Grid>
`;
